# openweather

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 39ff65096a9e_create_schemas.py  3d144f520f5c_populate_cityids_table.py  b03131bbce08_create_weather_document_table.py  c91f4a974dc3_create_cityids_table.py  f866c8b3831d_create_weather_result_table.py
openweather/: celery_utils.py  config.py  database.py  factory.py  main.py  models.py
openweather/pipeline/: weather.py  weatherRequests.py
openweather/routers/: weatherRouter.py
openweather/service/: weatherSvc.py
openweather/task/: weatherTask.py
